BE/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: be-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
          livenessProbe:
          #Nghĩa là Kubernetes sẽ gọi: http://<PodIP>:9000/health/live
            httpGet:
              path: /health/live
              port: 9000
            # Doi 10s khoi dong
            initialDelaySeconds: 10
            # Moi 10s kubernetes se gui 1 request kiem tra
            periodSeconds: 10
            # Neu sau 2s khoong co phan hoi --> Coi lan ktra do that bai sau 2s
            timeoutSeconds: 2
            # Nghia la phai that bai 3 lan lien tiep
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 2
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
